# environment-plan-evidence

./: .gitignore  README.md  _publish.yml  brief.txt  code-review.md  community-energy.sql  community_energy.sql  domestic_fuel_la.r  electricity-capacity.sql  electricity_consumption.r  ellmer.r  energy-consumption-wrangle.sql  energy-env-evidence.r  energy-etl.py  env-plan-evidence-optimised.html  env-plan-evidence-optimised.qmd  environment-plan-evidence-deprecated.qmd  environment-plan-evidence.html  environment-plan-evidence.qmd  fingertips-pm25.r  fuel-categorisation-with-llm.qmd  fuel_sector.csv  gemini-renewable-etl.py  httpx-docs.md  la_energy_wrangle.r  main.py  main_fuel_heating_type_all_las.r  marimo-play.py  motherduck-energy.sql  ods-ingest-rusty-sheets.sql  pie_chart_energy.R  pyproject.toml  queries.py  regional-energy-check.sql  regional-energy-database-create.sql  regional-renewable-etl.py  regional-renewable-etl.r  renewable-poc.sql  renewable_plot_sotr.r  renewables-capacity.r  (+12 more)
